--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # theme: jekyll-theme-minimal
-title: Mermade by Juliette Langlois
-logo: /images/logo_cplx.jpg
+# title:
+logo: /images/logo_cmplx.jpg
 description: Mermade is a project led and maintained by Juliette Langlois.
 show_downloads: false #can be true
 google_analytics:
