--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,12 @@
 # theme: jekyll-theme-minimal
-# title:
+title:
 logo: /images/logo_cmplx.jpg
-description: Mermade is a project led and maintained by Juliette Langlois.
+description: I am Juliette Langlois, a 27 years old ocean lover, born and raised by the Mediterranean Sea.
+Jacques-Yves Cousteau said and it has been proved since that Human tend to love what they know and to protect 
+what they love.
+We should all be concerned by the protection of the ocean realm, therefore we have to collectively increase the
+knowledge about the marine ecosystem both by scientists and the general public. I aim to part of this by contributing
+to research and protection, being part of active restoration and introduce people to the underwater world.
 show_downloads: false #can be true
 google_analytics:
 theme: jekyll-theme-minimal
