est ce que c'est le texte vide?

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # theme: jekyll-theme-minimal
-title: 
+title: test
 logo: /images/logo_cmplx.jpg
 description: I am Juliette Langlois, a 27 years old ocean lover, born and raised by the Mediterranean Sea.
 Jacques-Yves Cousteau said and it has been proved since that Human tend to love what they know and to protect 
